--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Notification</title>
   </head>
   <body>
-    <div class="bell__notification" current-count="9">
+    <div class="bell__notification" current-count="5">
       <i class="bx bxs-bell"></i>
     </div>
   </body>
